# histopreprocessing

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/histopreprocessing/: __init__.py  cli.py  histoqc.py  metadata.py  rename_masks.py  superpixel_mapping.py  superpixels.py  tiling.py  utils.py  wsi_id_mapping.py
src/histopreprocessing/datasets/: rename_masks.py
src/histopreprocessing/features/: benchmarks.py  compute_embeddings.py  compute_embeddings_faster.py  compute_embeddings_from_raw_wsi.py  foundation_models.py  torch_datasets.py  utils.py
src/histopreprocessing/histoqc/: __init__.py  config_loader.py  run_histoqc.py
src/histopreprocessing/superpixels/: superpixel_mapping.py
src/histopreprocessing/tiling/: __init__.py  contours.py  tile_coordinates.py  tiling.py  tiling_superpixel.py  tiling_superpixel_random_overlap.py  wsi_tiler.py
src/histopreprocessing/utils/: metadata.py
tests/: __init__.py  test_histopreprocessing.py  test_run_hisotqc.py
