[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "histopreprocessing"
version = "0.1.0"
description = "Preprocessing CLIs for WSIs"
readme = "README.rst"
authors = [
  {name = "Valentin Oreiller", email = "valentin.oreiller@gmail.com"}
]
maintainers = [
  {name = "Valentin Oreiller", email = "valentin.oreiller@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/voreille/histopreprocessing/issues"
changelog = "https://github.com/voreille/histopreprocessing/blob/master/changelog.md"
homepage = "https://github.com/voreille/histopreprocessing"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
histopreprocessing = "histopreprocessing.cli:cli"


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

